day 2 - new design and routes

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,8 +1,8 @@
 <nav role="navigation" class="navigation">
-  <a class="link navigation-link" href="#nogo">
+  <a class="link navigation-link" routerLink="/blog">
     Blog
   </a>
-  <a class="navigation-link navigation-link--standout" href="#nogo">
+  <a class="link navigation-link" routerLink="/new-post">
     Create New Blog
   </a>
 </nav>
