--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
-<app-form></app-form>
-<app-posts></app-posts>
-<app-footer></app-footer>
+<app-navigation></app-navigation>
+<main class="hero" [class.hero--centered]="this.pathName === '/new-post'">
+  <router-outlet></router-outlet>
+</main>
