--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,1 +1,38 @@
-<p>form works!</p>
+<h1>
+  New Post
+</h1>
+<form class="form" #postForm="ngForm" (ngSubmit)="onCreatePost(postForm.value)">
+  <div class="input-container">
+    <label class="label" for="title">
+      Title
+    </label>
+    <input
+      type="text"
+      class="text-input"
+      id="title"
+      required
+      ngModel
+      name="title"
+    />
+  </div>
+  <div class="input-container">
+    <label class="label" for="content">
+      Content
+    </label>
+    <textarea
+      class="textarea-input"
+      id="content"
+      required
+      ngModel
+      name="content"
+    ></textarea>
+  </div>
+
+  <button
+    class="button"
+    type="submit"
+    [disabled]="!postForm.valid"
+  >
+    Send Post
+  </button>
+</form>
