--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -6,6 +6,9 @@
   align-items: center;
 }
 
-.hero--centered {
-  justify-content: center;
+.hero-title {
+  margin: 0;
+  font-size: 4rem;
+  padding: 0 1.5rem;
+  letter-spacing: 6px;
 }
