--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,25 +1,14 @@
 $pink: #D11D67;
-$white: #fff;
 
 .navigation {
+  position: absolute;
   align-items: center;
+  display: -webkit-box;
   display: flex;
   height: 77px;
-}
+  justify-content: flex-end;
+  width: 100%;}
 
 .navigation-link {
   margin-right: 1rem;
-  color: $pink;
-}
-
-.navigation-link--standout {
-  margin-right: 0;
-  background: $pink;
-  color: $white;
-  height: 100%;
-  padding: 0 1rem;
-  display: flex;
-  align-items: center;
-  font-weight: bold;
-  text-decoration: none;
 }
