--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,3 +1,15 @@
 <h1>
   Posts
 </h1>
+
+<button
+  class="btn btn-danger"
+  [disabled]="loadedPosts.length < 1"
+  (click)="onClearPosts()"
+>
+  Clear Posts
+</button>
+<div *ngFor="let post of loadedPosts" >
+  {{ post.title }}  
+  {{ post.content }}  
+</div>
