day 4 - activerouterlink and style updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navigation></app-navigation>
-<main class="hero" [class.hero--centered]="this.pathName === '/new-post'">
+<main class="hero">
   <router-outlet></router-outlet>
 </main>
