--- a/src/app/form/form.component.scss
+++ b/src/app/form/form.component.scss
@@ -1,3 +1,17 @@
+$black: #000;
+$white: #fff;
+$gray: #b7b5b5;
+
+.container {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  background: $white;
+  color: $black;
+  flex-direction: column;
+  padding: 0 2rem;
+}
+
 .input-container {
   margin-bottom: 1.5rem;
 }
@@ -10,13 +24,13 @@
 
 .text-input {
   width: 100%;
-  border: 2px solid gray;
+  border: 2px solid $black;
   height: 40px;
   padding: 0 1rem;
   box-shadow: none;
-  border-radius: 4px;
-  color: black;
-  font-family: "Raleway", sans-serif;
+  border-radius: 2px;
+  color: $black;
+  font-family: "Nunito", sans-serif;
   font-size: 1rem;
   font-weight: 300;
   line-height: 1.3;
@@ -27,19 +41,40 @@
 
 .textarea-input {
   width: 100%;
-  border: 2px solid gray;
-  height: 40px;
+  border: 2px solid $black;
   padding: 1rem;
   box-shadow: none;
-  border-radius: 4px;
-  color: black;
-  font-family: "Raleway", sans-serif;
+  border-radius: 2px;
+  color: $black;
+  font-family: "Nunito", sans-serif;
   font-size: 1rem;
   font-weight: 300;
   line-height: 1.3;
   height: auto;
   outline: 0;
   transition: border-color .15s ease;
-  min-height: 125px;
-    margin: 0 0 16px;
+  min-height: 140px;
+  margin: 0 0 16px;
+}
+
+.form {
+  width: 30rem;
+}
+
+.button {
+  appearance: none;
+  padding: 1rem;
+  background: $white;
+  border: 2px solid $black;
+  font-size: 1rem;
+  color: $black;
+}
+
+.button:disabled {
+  appearance: none;
+  padding: 1rem;
+  background: $gray;
+  border: 2px solid $gray;
+  font-size: 1rem;
+  color: $white;
 }
