--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,18 +3,27 @@ $white: #fff;
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Nunito', sans-serif;
 }
 
 * {
   box-sizing: border-box;
 }
 
+h1, h2, h3 {
+  margin: 0;
+  padding: 0;
+}
+
+.page-title {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+
 .link {
   position: relative;
   text-decoration: none;
   color: $white;
-  // font-weight: bold;
   
   &:hover,
   &:focus {
@@ -37,10 +46,4 @@ body {
   width: 100%;
   left: 0;
   background: $white;
-}
-
-.centered-column {
-  max-width: 64rem;
-  margin: 0 auto;
-  padding: 0 1rem;
 }
