--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -11,8 +11,12 @@ $white: #fff;
 
 .hero-title {
   margin: 0;
-  font-size: 4rem;
+  font-size: 3rem;
   padding: 0 1.5rem;
   letter-spacing: 6px;
   font-family: 'Raleway', sans-serif;
+  
+  @media all and (min-width: 400px) {
+    font-size: 4rem;
+  }
 }
