--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,5 @@ $pink: #D11D67;
 $white: #fff;
 
 .hero {
-  height: calc(100vh - 77px);
-  background: $pink;
-  color: $white;
+  // height: calc(100vh - 77px);
 }
