--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav role="navigation" class="navigation" [class.navigation--inverse-pink]="rlaPost.isActive" [class.navigation--inverse-blue]="rlaBlog.isActive">
+<nav role="navigation" class="navigation" [class.navigation--inverse-pink]="rlaPost.isActive || rlaBlog.isActive">
   <a class="navigation-link navigation-link--site link" routerLink="">
     OHDC
   </a>
